--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "firebase": "^9.1.3",
     "react": "17.0.2",
     "react-native": "0.66.0"
   },
